--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.4.10",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -26,6 +27,8 @@
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
     "react-query": "^3.39.3",
+    "react-redux": "^8.1.2",
+    "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
