--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^8.1.2",
     "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.3",
+    "timers-promises": "^1.0.1",
     "typescript": "5.1.6"
   },
   "devDependencies": {
